backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        cloud.google.com/gke-preemptible: 'true'
      containers:
      - name: backend
        image: gcr.io/wagon-bootcamp-450216/backend:v1
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu:    "200m"
            memory: "256Mi"
          limits:
            cpu:    "500m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
