frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        cloud.google.com/gke-preemptible: 'true'
      containers:
      - name: frontend
        image: gcr.io/wagon-bootcamp-450216/frontend:v1
        ports:
        - containerPort: 8501
        resources:
          requests:
            cpu:    "200m"
            memory: "256Mi"
          limits:
            cpu:    "500m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 8501
    targetPort: 8501
  type: ClusterIP
