nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        cloud.google.com/gke-preemptible: 'true'
      containers:
      - name: nginx
        image: gcr.io/wagon-bootcamp-450216/nginx:v1
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: tls
          mountPath: /etc/nginx/ssl
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        resources:
          requests:
            cpu:    "100m"
            memory: "128Mi"
          limits:
            cpu:    "300m"
            memory: "256Mi"
      volumes:
      - name: tls
        secret:
          secretName: tls-cert
          items:
          - key: tls.crt
            path: cert.pem
          - key: tls.key
            path: key.pem
      - name: nginx-conf
        configMap:
          name: nginx-conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  type: LoadBalancer
  loadBalancerIP: 34.76.90.27
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
